<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:scrollbars="none">

    <android.support.v7.preference.PreferenceCategory
            android:key="themeCategoryKey"
            android:title="@string/settings_category_theme">

        <SwitchPreferenceCompat
                android:key="themeKey"
                android:summaryOff="@string/settings_title_theme_off"
                android:summaryOn="@string/settings_title_theme_on"
                android:title="@string/settings_title_theme"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
            android:key="languageKeyCategory"
            android:title="@string/settings_category_language">

        <ListPreference
                android:defaultValue="en"
                android:entries="@array/languagesList"
                android:entryValues="@array/languagesValues"
                android:key="languageKey"
                android:summary="@string/settings_summary_language"
                android:title="@string/settings_title_language"/>
    </android.support.v7.preference.PreferenceCategory>

</PreferenceScreen>